--- a/.classpath
+++ b/.classpath
@@ -2,20 +2,20 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/lenovo/eclipse-workspaceJava/EmployeesDB/src/lib/antlr-2.7.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/lenovo/eclipse-workspaceJava/EmployeesDB/src/lib/classmate-1.3.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/lenovo/eclipse-workspaceJava/EmployeesDB/src/lib/dom4j-1.6.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/lenovo/eclipse-workspaceJava/EmployeesDB/src/lib/hibernate-commons-annotations-5.0.1.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/lenovo/eclipse-workspaceJava/EmployeesDB/src/lib/hibernate-core-5.2.11.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/lenovo/eclipse-workspaceJava/EmployeesDB/src/lib/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/lenovo/eclipse-workspaceJava/EmployeesDB/src/lib/javassist-3.20.0-GA.jar"/>
-	<classpathentry kind="lib" path="C:/Users/lenovo/eclipse-workspaceJava/EmployeesDB/src/lib/jboss-annotations-api_1.2_spec-1.0.0.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/lenovo/eclipse-workspaceJava/EmployeesDB/src/lib/jboss-jms-api_2.0_spec-1.0.0.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/lenovo/eclipse-workspaceJava/EmployeesDB/src/lib/jboss-logging-3.3.0.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/lenovo/eclipse-workspaceJava/EmployeesDB/src/lib/jboss-transaction-api_1.2_spec-1.0.0.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/lenovo/eclipse-workspaceJava/EmployeesDB/src/lib/lucene-core-5.5.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/lenovo/eclipse-workspaceJava/EmployeesDB/src/lib/lucene-queryparser-5.5.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/lenovo/eclipse-workspaceJava/EmployeesDB/src/lib/mysql-connector-java-5.1.38-bin.jar"/>
-	<classpathentry kind="lib" path="C:/Users/lenovo/eclipse-workspaceJava/EmployeesDB/src/lib/xml-apis-1.3.03.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lenovo/Documents/Ing Sistemas/Bases de datos/Librerías Hibernate/lib/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lenovo/Documents/Ing Sistemas/Bases de datos/Librerías Hibernate/lib/classmate-1.3.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lenovo/Documents/Ing Sistemas/Bases de datos/Librerías Hibernate/lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lenovo/Documents/Ing Sistemas/Bases de datos/Librerías Hibernate/lib/hibernate-commons-annotations-5.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lenovo/Documents/Ing Sistemas/Bases de datos/Librerías Hibernate/lib/hibernate-core-5.2.11.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lenovo/Documents/Ing Sistemas/Bases de datos/Librerías Hibernate/lib/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lenovo/Documents/Ing Sistemas/Bases de datos/Librerías Hibernate/lib/javassist-3.20.0-GA.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lenovo/Documents/Ing Sistemas/Bases de datos/Librerías Hibernate/lib/jboss-annotations-api_1.2_spec-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lenovo/Documents/Ing Sistemas/Bases de datos/Librerías Hibernate/lib/jboss-jms-api_2.0_spec-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lenovo/Documents/Ing Sistemas/Bases de datos/Librerías Hibernate/lib/jboss-logging-3.3.0.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lenovo/Documents/Ing Sistemas/Bases de datos/Librerías Hibernate/lib/jboss-transaction-api_1.2_spec-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lenovo/Documents/Ing Sistemas/Bases de datos/Librerías Hibernate/lib/lucene-core-5.5.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lenovo/Documents/Ing Sistemas/Bases de datos/Librerías Hibernate/lib/lucene-queryparser-5.5.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lenovo/Documents/Ing Sistemas/Bases de datos/Librerías Hibernate/lib/mysql-connector-java-5.1.38-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Users/lenovo/Documents/Ing Sistemas/Bases de datos/Librerías Hibernate/lib/xml-apis-1.3.03.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
